05. Apr 2012 Christoph Thielecke <crissi99@gmx.de>
	- font selector at content viewer dialog added
	- display content size correctly on context viewer dialog
	- resize of commwidget content fixed
	- commwidget contents fixes
	- display content size if file has stored content

03. Apr 2012 Christoph Thielecke <crissi99@gmx.de>
	- m4v extension for mediainfo scanning added
	- parameters resorted
	- use mainwindow as parent instead guislave (again)
	- size of process dialog fixed if no progressbar is shown
	- resize of commwidget content fixed

02. Apr 2012 Christoph Thielecke <crissi99@gmx.de>
	- commwidget is now a dockable widget (can be undocked)
	- custom status bar replaced by statusbar of qmainwindow (prevents resizing application window if message is too long)
	- displaying lib7zip found status at selreadable dialog fixed
	- icon for help action fixed
	- more icon fixes ;)
	- view menu added
	- show/hide status bar added
	- show/hide toolbar added
	- show/hide comment dock added
	- show/hide systray added

01. Apr 2012 Christoph Thielecke <crissi99@gmx.de>
	- menu height fixed
	- regression on repaint commwidget fixed
	- save position and size of content dialog added
	- save position and size of comment/category dialog added
	- proper init of INFOLIST items at parseAviHeader()

31. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
	- q3gridlayout replaced by qgridlayout
	- q3ptrlist replaced by qlist
	- q3multilinedit replaced by qtextedit
	- q3valuelist replaced by qlist
	- q3hboxlayout replaced by qhboxlayout
	- q3vboxlayout replaced by qvboxlayout
	- mainwidget now uses qmainwidget as base class
	- custom toolbar replaced by qmainwidget toolbar (this allows to undock it from mainwidget and let the user move to other place
	- qtoolbuttons replaced by qaction in qtoolbar
	- q3listbox replaced by qlistwidget
	- q3buttongroup replaced by qgroupbox
	- q3groupbox replaced by qgroupbox

28. Mar 2012 Christoph Thielecke <crissi99@gmx.de>